# syntaxdot

./: .dockerignore  .gitignore  CHANGELOG.md  COPYRIGHT.md  Cargo.toml  Dockerfile  README.md  default.nix  flake.nix  models.nix  release.toml  shell.nix
.github/: dependabot.yml
.github/workflows/: release.yml  rust.yml
build-support/: crate-overrides.nix
doc/: finetune.md  install.md  models.md
nix/: Cargo.nix  crate-overrides.nix  models.nix  sources.json
scripts/: plot-layer-weights  pytorch-bert-to-syntaxdot.py  pytorch-roberta-to-syntaxdot.py  pytorch-squeezebert-to-syntaxdot.py  tensor_module.py  test-all.sh  update-syntaxdot-0.2-model.py
syntaxdot/: Cargo.toml  build.rs
syntaxdot-cli/: Cargo.toml
syntaxdot-cli/src/: io.rs  main.rs  progress.rs  save.rs  sent_proc.rs  traits.rs  util.rs
syntaxdot-cli/src/subcommands/: annotate.rs  dep2label.rs  distill.rs  filter_len.rs  finetune.rs  mod.rs  prepare.rs  server.rs
syntaxdot-cli/src/summary/: mod.rs  noop.rs  tensorboard.rs
syntaxdot-encoders/: Cargo.toml
syntaxdot-encoders/benches/: mst.rs
syntaxdot-encoders/data/lang/de/tdz/: tdz10-separable-verbs.txt  tdz11-separable-prefixes.txt
syntaxdot-encoders/src/: lib.rs
syntaxdot-encoders/src/categorical/: encoder.rs  mod.rs  number.rs
syntaxdot-encoders/src/dependency/: encoder.rs  mod.rs
syntaxdot-encoders/src/deprel/: error.rs  mod.rs  post_processing.rs  relative_pos.rs  relative_position.rs
syntaxdot-encoders/src/depseq/: error.rs  mod.rs  post_processing.rs  relative_pos.rs  relative_position.rs
syntaxdot-encoders/src/lang/: mod.rs
syntaxdot-encoders/src/lang/de/: mod.rs
syntaxdot-encoders/src/lang/de/tdz/: mod.rs
syntaxdot-encoders/src/lang/de/tdz/lemma/: automaton.rs  constants.rs  error.rs  mod.rs
syntaxdot-encoders/src/lang/de/tdz/lemma/transform/: delemmatization.rs  lemmatization.rs  misc.rs  mod.rs  named_entity.rs  svp.rs  test_helpers.rs
syntaxdot-encoders/src/layer/: error.rs  mod.rs
syntaxdot-encoders/src/lemma/: edit_tree.rs  encoder.rs  mod.rs  tdz.rs
syntaxdot-encoders/testdata/: lassy-small-dev.conllu
syntaxdot-encoders/testdata/lang/de/tdz/lemma/: add-separated-verb-prefix.test  form-as-lemma.test  mark-verb-prefix.test  remove-sep-verb-prefix.test  remove-trunc-marker.test  restore-case.test  simplify-article-lemma.test  simplify-personal-pronoun.test  simplify-piat-lemma.test  simplify-pidat-lemma.test  simplify-pis-lemma.test  simplify-possesive-pronoun-lemma.test
syntaxdot-summary/: Cargo.toml  build.rs
syntaxdot-summary/src/: crc32.rs  event_writer.rs  lib.rs  record_writer.rs  summary_writer.rs
syntaxdot-tch-ext/: Cargo.toml
syntaxdot-tch-ext/src/: lib.rs  tensor.rs
syntaxdot-tokenizers/: Cargo.toml
syntaxdot-tokenizers/src/: albert.rs  bert.rs  error.rs  lib.rs  xlm_roberta.rs
syntaxdot-transformers/: Cargo.toml
syntaxdot-transformers/src/: activations.rs  cow.rs  error.rs  hdf5_model.rs  layers.rs  lib.rs  loss.rs  module.rs  scalar_weighting.rs  traits.rs  util.rs
syntaxdot-transformers/src/models/: encoder.rs  layer_output.rs  mod.rs  resources.rs  traits.rs
syntaxdot-transformers/src/models/albert/: config.rs  embeddings.rs  encoder.rs  mod.rs
syntaxdot-transformers/src/models/bert/: config.rs  embeddings.rs  encoder.rs  layer.rs  mod.rs
syntaxdot-transformers/src/models/roberta/: mod.rs
syntaxdot-transformers/src/models/sinusoidal/: mod.rs
syntaxdot-transformers/src/models/squeeze_albert/: mod.rs
syntaxdot-transformers/src/models/squeeze_bert/: config.rs  embeddings.rs  encoder.rs  layer.rs  mod.rs
syntaxdot-transformers/utils/: pytorch-roberta-to-hdf5.py  pytorch-squeezetorch-to-hdf5.py  tf_checkpoint_to_hdf5.py
syntaxdot/benches/: mst.rs
syntaxdot/src/: config.rs  dataset.rs  error.rs  lib.rs  lr.rs  tensor.rs  util.rs
syntaxdot/src/dataset/: conll.rs  mod.rs  plaintext.rs  sentence_iter.rs  sentence_itertools.rs  tensor_iter.rs
syntaxdot/src/encoders/: config.rs  encoders.rs  mod.rs
syntaxdot/src/graph/: mod.rs  mst.rs
syntaxdot/src/input/: albert.rs  bert.rs  mod.rs  resources.rs  xlm_roberta.rs
syntaxdot/src/model/: bert.rs  biaffine_dependency_layer.rs  mod.rs  pairwise_bilinear.rs  pooling.rs  seq_classifiers.rs
syntaxdot/src/optimizers/: adamw.rs  grad.rs  grad_scale.rs  mod.rs
syntaxdot/src/tagger/: mod.rs
syntaxdot/testdata/: sticker.conf
tch-ext/: Cargo.toml
tch-ext/src/: lib.rs
utils/: plot-layer-weights
