[package]
name = "syntaxdot-cli"
version = "0.3.0"
edition = "2018"
authors = ["Daniël de Kok <me@danieldk.eu>"]
description = "Neural sequence labeler"
homepage = "https://github.com/tensordot/syntaxdot"
repository = "https://github.com/tensordot/syntaxdot.git"
documentation = "https://github.com/tensordot/syntaxdot"
license = "BlueOak-1.0.0"

[[bin]]
name = "syntaxdot"
path = "src/main.rs"

[dependencies]
anyhow = "1"
bytecount = "0.6"
clap = "2"
conllu = "0.6"
env_logger = "0.8"
indicatif = "0.15"
itertools = "0.10"
log = "0.4"
ndarray = "0.14"
ordered-float = { version = "2", features = ["serde"] }
serde_yaml = "0.8"
stdinout = "0.4"
syntaxdot = { path = "../syntaxdot", version = "0.3.0", default-features = false }
syntaxdot-encoders = { path = "../syntaxdot-encoders", version = "0.3.0" }
syntaxdot-summary = { path = "../syntaxdot-summary", version = "0.3.0" }
syntaxdot-tch-ext = { path = "../syntaxdot-tch-ext", version = "0.3.0" }
syntaxdot-tokenizers = { path = "../syntaxdot-tokenizers", version = "0.3.0" }
syntaxdot-transformers = { path = "../syntaxdot-transformers", version = "0.3.0", default-features = false }
tch = "0.4"
threadpool = "1"
udgraph = "0.6"
