[package]
name = "syntaxdot-cli"
version = "0.5.0"
edition = "2018"
authors = ["Daniël de Kok <me@danieldk.eu>"]
description = "Neural sequence labeler"
homepage = "https://github.com/tensordot/syntaxdot"
repository = "https://github.com/tensordot/syntaxdot.git"
documentation = "https://github.com/tensordot/syntaxdot"
license = "MIT OR Apache-2.0"
rust-version = "1.70.0"

[[bin]]
name = "syntaxdot"
path = "src/main.rs"

[dependencies]
anyhow = "1"
bytecount = "0.6"
clap = { version = "4", features = ["cargo"] }
clap_complete = "4"
conllu = "0.8"
env_logger = "0.10"
indicatif = "0.17"
itertools = "0.11"
log = "0.4"
ndarray = "0.15"
ordered-float = { version = "4", features = ["serde"] }
rayon = "1"
serde_yaml = "0.9"
stdinout = "0.4"
syntaxdot = { path = "../syntaxdot", version = "0.5.0", default-features = false }
syntaxdot-encoders = { path = "../syntaxdot-encoders", version = "0.5.0" }
syntaxdot-summary = { path = "../syntaxdot-summary", version = "0.5.0" }
syntaxdot-tch-ext = { path = "../syntaxdot-tch-ext", version = "0.5.0" }
syntaxdot-tokenizers = { path = "../syntaxdot-tokenizers", version = "0.5.0" }
syntaxdot-transformers = { path = "../syntaxdot-transformers", version = "0.5.0", default-features = false }
tch = { version = "0.14", default-features = false }
udgraph = "0.8"
