[package]
name = "syntaxdot-encoders"
version = "0.3.0-beta.0"
authors = ["Daniël de Kok <me@danieldk.eu>"]
edition = "2018"
description = "Encoders for linguistic features"
homepage = "https://github.com/tensordot/syntaxdot"
repository = "https://github.com/tensordot/syntaxdot.git"
documentation = "https://docs.rs/syntaxdot-encoders/"
license = "BlueOak-1.0.0"

[dependencies]
conllu = "0.6"
itertools = "0.10"
numberer = "0.2"
lazy_static = "1"
ndarray = "0.14"
ohnomore = "0.3"
ordered-float = "1"
petgraph = "0.5"
rand = "0.7"
rand_xorshift = "0.2"
seqalign = "0.2"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
thiserror = "1"
udgraph = "0.6"

[dev-dependencies]
criterion = "0.3"
ndarray-rand = "0.11"

[[bench]]
name = "mst"
harness = false
