[package]
name = "syntaxdot-encoders"
version = "0.3.0"
authors = ["Daniël de Kok <me@danieldk.eu>"]
edition = "2018"
description = "Encoders for linguistic features"
homepage = "https://github.com/tensordot/syntaxdot"
repository = "https://github.com/tensordot/syntaxdot.git"
documentation = "https://docs.rs/syntaxdot-encoders/"
license = "BlueOak-1.0.0"

[dependencies]
conllu = "0.6"
itertools = "0.10"
numberer = "0.2"
lazy_static = "1"
ndarray = "0.14"
ohnomore = "0.3"
ordered-float = "2"
petgraph = "0.5"
seqalign = "0.2"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
thiserror = "1"
udgraph = "0.6"

[dev-dependencies]
criterion = "0.3"
ndarray-rand = "0.13"
rand = "0.8"
rand_xorshift = "0.3"

[[bench]]
name = "mst"
harness = false
