[package]
name = "syntaxdot-encoders"
version = "0.5.0"
authors = ["Daniël de Kok <me@danieldk.eu>"]
edition = "2018"
description = "Encoders for linguistic features"
homepage = "https://github.com/tensordot/syntaxdot"
repository = "https://github.com/tensordot/syntaxdot.git"
documentation = "https://docs.rs/syntaxdot-encoders/"
license = "MIT OR Apache-2.0"

[dependencies]
caseless = "0.2"
conllu = "0.8"
fst = "0.4"
itertools = "0.11"
numberer = "0.2"
lazy_static = "1"
maplit = "1"
ndarray = "0.15"
ordered-float = "4"
petgraph = "0.6"
seqalign = "0.2"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
thiserror = "1"
udgraph = "0.8"
unicode-normalization = "0.1"

[dev-dependencies]
criterion = "0.5"
ndarray-rand = "0.14"
rand = "0.8"
rand_xorshift = "0.3"

[[bench]]
name = "mst"
harness = false
