[package]
name = "syntaxdot-summary"
version = "0.5.0-beta.0"
authors = ["Daniël de Kok <me@danieldk.eu>"]
edition = "2018"
description = "TensorBoard summary writer"
homepage = "https://github.com/tensordot/syntaxdot"
repository = "https://github.com/tensordot/syntaxdot.git"
documentation = "https://docs.rs/syntaxdot-transformers/"
license = "MIT OR Apache-2.0"


[dependencies]
hostname = "0.3"
prost = { version = "0.9", features = ["prost-derive"] }
