[package]
name = "syntaxdot-tch-ext"
version = "0.3.0"
authors = ["Daniël de Kok <me@danieldk.eu>"]
edition = "2018"
description = "tch path extension for partitioning parameters in groups"
homepage = "https://github.com/tensordot/syntaxdot"
repository = "https://github.com/tensordot/syntaxdot.git"
documentation = "https://docs.rs/syntaxdot-tch-ext/"
license = "BlueOak-1.0.0"

[dependencies]
itertools = "0.10"
tch = "0.5"
