[package]
name = "syntaxdot-tch-ext"
version = "0.5.0"
authors = ["Daniël de Kok <me@danieldk.eu>"]
edition = "2018"
description = "tch path extension for partitioning parameters in groups"
homepage = "https://github.com/tensordot/syntaxdot"
repository = "https://github.com/tensordot/syntaxdot.git"
documentation = "https://docs.rs/syntaxdot-tch-ext/"
license = "MIT OR Apache-2.0"
rust-version = "1.70.0"

[dependencies]
itertools = "0.11"
tch = { version = "0.14", default-features = false }

[features]
doc-only = ["tch/doc-only"]

[package.metadata.docs.rs]
features = [ "doc-only" ]
