[package]
name = "syntaxdot-tokenizers"
version = "0.3.0"
authors = ["Daniël de Kok <me@danieldk.eu>"]
edition = "2018"
description = "Subword tokenizers"
homepage = "https://github.com/tensordot/syntaxdot"
repository = "https://github.com/tensordot/syntaxdot.git"
documentation = "https://docs.rs/syntaxdot-tokenizers/"
license = "BlueOak-1.0.0"

[dependencies]
ndarray = "0.14"
sentencepiece = "0.6"
thiserror = "1"
udgraph = "0.6"
wordpieces = "0.4"

[features]
model-tests = []