[package]
name = "syntaxdot-transformers"
version = "0.3.0"
authors = ["Daniël de Kok <me@danieldk.eu>"]
edition = "2018"
description = "Transformer architectures, such as BERT"
homepage = "https://github.com/tensordot/syntaxdot"
repository = "https://github.com/tensordot/syntaxdot.git"
documentation = "https://docs.rs/syntaxdot-transformers/"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
syntaxdot-tch-ext = { path = "../syntaxdot-tch-ext", version = "0.3.0" }
tch = "0.5"
thiserror = "1"

[dev-dependencies]
approx = "0.4"
maplit = "1"
ndarray = { version = "0.15", features = ["approx"] }

[features]
model-tests = []
