[package]
name = "syntaxdot-transformers"
version = "0.4.0"
authors = ["Daniël de Kok <me@danieldk.eu>"]
edition = "2018"
description = "Transformer architectures, such as BERT"
homepage = "https://github.com/tensordot/syntaxdot"
repository = "https://github.com/tensordot/syntaxdot.git"
documentation = "https://docs.rs/syntaxdot-transformers/"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
syntaxdot-tch-ext = { path = "../syntaxdot-tch-ext", version = "0.4.0" }
tch = { version = "0.7.0", default-features = false }
thiserror = "1"

[build-dependencies]
tch = { version = "0.7.0", default-features = false }

[dev-dependencies]
approx = "0.4"
maplit = "1"
ndarray = { version = "0.15", features = ["approx"] }
test-case = "2"

[features]
model-tests = []
