[package]
name = "syntaxdot-transformers"
version = "0.5.0"
authors = ["Daniël de Kok <me@danieldk.eu>"]
edition = "2018"
description = "Transformer architectures, such as BERT"
homepage = "https://github.com/tensordot/syntaxdot"
repository = "https://github.com/tensordot/syntaxdot.git"
documentation = "https://docs.rs/syntaxdot-transformers/"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
syntaxdot-tch-ext = { path = "../syntaxdot-tch-ext", version = "0.5.0" }
tch = { version = "0.14", default-features = false }
thiserror = "1"

[dev-dependencies]
approx = "0.5"
maplit = "1"
ndarray = { version = "0.15", features = ["approx-0_5"] }

[features]
model-tests = []
doc-only = ["syntaxdot-tch-ext/doc-only", "tch/doc-only"]

[package.metadata.docs.rs]
features = [ "doc-only" ]
