[package]
name = "syntaxdot"
version = "0.3.0"
edition = "2018"
authors = ["Daniël de Kok <me@danieldk.eu>"]
description = "Neural sequence labeler"
homepage = "https://github.com/tensordot/syntaxdot"
repository = "https://github.com/tensordot/syntaxdot.git"
documentation = "https://docs.rs/syntaxdot/"
license = "BlueOak-1.0.0"

[dependencies]
conllu = "0.6"
ndarray = "0.15"
numberer = "0.2"
log = "0.4"
ordered-float = "2"
rand = "0.7"
rand_xorshift = "0.2"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
syntaxdot-encoders = { path = "../syntaxdot-encoders", version = "0.3.0" }
syntaxdot-tch-ext = { path = "../syntaxdot-tch-ext", version = "0.3.0" }
syntaxdot-tokenizers = { path = "../syntaxdot-tokenizers", default-features = false, version = "0.3.0" }
syntaxdot-transformers = { path = "../syntaxdot-transformers", default-features = false, version = "0.3.0" }
tch = "0.4"
thiserror = "1"
toml = "0.5"
udgraph = "0.6"

[dev-dependencies]
approx = "0.3"
lazy_static = "1"
maplit = "1"
wordpieces = "0.4"
